solves issue with template 3 dropdown scrollbar

--- a/AgentWeb/modules/internet/search/search3skin/scss/agent-templates/_014-header.scss
+++ b/AgentWeb/modules/internet/search/search3skin/scss/agent-templates/_014-header.scss
@@ -448,7 +448,7 @@
 		
 			display: none; // Hide by default
 			
-			overflow-y: scroll; // Allows scrolling in case there are a ridiculous amout of elements in the dropdown
+			overflow-y: auto; // Allows scrolling in case there are a ridiculous amout of elements in the dropdown
 			position: absolute;
 			top: 100%; // Nav height
 			left: 0;
